# ironforge

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  AUTH_RBAC_PLAN.md  BACKLOG.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  FRONTEND_API.md  Makefile  README.md  RELEASE_NOTES.md  SECURITY_ISSUES.md  SECURITY_TODO.md  TODO.md  UNIFIED-PLATFORM.md  UNIFIED_PLATFORM_PLAN.md  bo_approval_workflow.py  bo_slack_messaging.py  booking_parser.py  config.py  cost_tracking.py  db.py  docker-compose.local.yml  docker-compose.yml  gemini_cache.txt  gpt_doc.txt  gpt_image_1_doc.txt  llm.py  migrate_folder_structure.py  migrate_photos_to_subfolders.py  mockup_generator.py  notes.txt  pdf_slide_utils.py  pptx_utils.py  proposals.db  proposals.db-shm  proposals.py  (+10 more)
db/: rls.py  (+7 more)
sales-module/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  install_fonts.sh  pyproject.toml  run_service.py
sales-module/.github/workflows/: ci.yml
sales-module/api/: schemas.py  server.py
sales-module/api/middleware/: rate_limit.py  security_headers.py
sales-module/api/routers/: health.py
sales-module/app_settings/: __init__.py  settings.py
sales-module/contracts/: trusted_headers.py
sales-module/core/: bo_messaging.py  chat_persistence.py
sales-module/db/: schema.py
sales-module/db/backends/: __init__.py
sales-module/db/migrations/: MIGRATION_GUIDE.md  __init__.py
sales-module/db/migrations/salesbot/: 00_reset.sql  01_schema.sql
sales-module/db/migrations/ui/: 00_reset.sql
sales-module/generators/: __init__.py
sales-module/generators/effects/: color.py  compositor.py  edge.py
sales-module/integrations/auth/: base.py  client.py
sales-module/integrations/auth/providers/: supabase.py
sales-module/integrations/channels/adapters/: slack.py  web.py
sales-module/integrations/llm/: base.py
sales-module/integrations/llm/prompts/: __init__.py  bo_parsing.py
sales-module/integrations/rbac/: __init__.py
sales-module/integrations/rbac/providers/: database.py
sales-module/integrations/storage/providers/: __init__.py
sales-module/orphan/: MOCKUP_STUDIO.md
sales-module/orphan/dashboard/: render.yaml
sales-module/orphan/dashboard/public/: dashboard.html
sales-module/tests/: __init__.py  conftest.py  test_mockups.py
sales-module/utils/: cache.py  memory.py
sales-module/workflows/: __init__.py  bo_parser.py
src/asset-management/: Dockerfile  asset_hierarchy_report.md  asset_hierarchy_report_BEFORE_MIGRATION.md  ci-cd.yml  config.py  initdeploy.txt  main.py  pyproject.toml  render.yaml  requirements.aws.txt  requirements.render.txt  requirements.txt  run_service.py
src/asset-management/api/: __init__.py  server.py
src/asset-management/api/routers/: __init__.py  asset_types.py  eligibility.py  health.py  internal.py  locations.py  mockup_frames.py  network_assets.py  networks.py  packages.py  storage.py
src/asset-management/core/: __init__.py  asset_types.py  eligibility.py  locations.py  network_assets.py  networks.py  packages.py
src/asset-management/db/: __init__.py  base.py  database.py
src/asset-management/db/backends/: __init__.py  sqlite.py  supabase.py
src/asset-management/db/migrations/: 01_schema.sql  01_schema_single.sql.bak  02_mockup_frames.sql  03_rollback_standalone.sql  03_unify_standalone.sql  04_add_country_column.sql  06_mockup_frames_rename_finish_to_side.sql  06b_migrate_mockup_storage.py  07_grant_view_permissions.sql
src/asset-management/db/scripts/: convert_templates_to_pdf.py  generate_asset_report.py  generate_asset_tree.py  migrate_network_data.py  migrate_to_supabase.py
src/asset-management/integrations/: __init__.py  sales_module.py
src/asset-management/local/: Dockerfile
src/asset-management/render/: Dockerfile
src/shared/crm-cache/: pyproject.toml
src/shared/crm-cache/crm_cache/: __init__.py  base.py  client.py  decorators.py
src/shared/crm-channels/: pyproject.toml
src/shared/crm-channels/crm_channels/: __init__.py  base.py  formatting.py  router.py
src/shared/crm-llm/: pyproject.toml
src/shared/crm-llm/crm_llm/: __init__.py  base.py  client.py  cost_tracker.py
src/shared/crm-security/: README.md  pyproject.toml
src/shared/crm-security/crm_security/: __init__.py  api_keys.py  audit.py  config.py  context.py  dependencies.py  middleware.py  models.py  rate_limit.py  rbac.py  service_auth.py  trusted_headers.py
src/unified-ui/: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  ci-cd.yml  email-templates.js  package-lock.json  pyproject.toml  render.yaml  requirements.render.txt  requirements.txt  run_service.py  server.js  supabase.env  supabase.env.example
src/unified-ui/.github/workflows/: ci.yml
src/unified-ui/backend/: config.py  main.py
src/unified-ui/backend/contracts/: trusted_headers.py
src/unified-ui/backend/middleware/: auth.py
src/unified-ui/backend/routers/: admin.py  auth.py  channel_identity.py  dev_panel.py  modules.py  proxy.py
src/unified-ui/backend/services/: local_auth.py  permissions.py  rbac_service.py  supabase_client.py
src/unified-ui/comms/: FOR_AMR.md  For Amr.md  LOCATION_DATA_MIGRATION.md
src/unified-ui/frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
src/unified-ui/frontend/dev-dist/: sw.js
src/unified-ui/frontend/public/: dev-panel.html
src/unified-ui/frontend/src/: main.jsx
src/unified-ui/local/: Dockerfile
src/unified-ui/orphan/: server.js
src/unified-ui/public/: index.html  logs-panel.html  manifest.webmanifest  sw.js
src/unified-ui/public/assets/: index-6tUDyNjo.css  index-B9_a9ct1.js  index-B9fN2LXe.js  index-BAdcpIRv.css  index-BCZZ-Jiv.css  index-BJtq2QUB.css  index-BODEuwAx.js  index-BUC5rrIg.js  index-BnFQd69E.js  index-BtaFDDFm.js  index-C-K8vA1j.js  index-CYrFy0wd.css  index-C_HQjapz.js  index-CoGbUdQ8.js  index-D00X2jlQ.css  index-D18_7x3u.js  index-D4EhdhRD.js  index-DKSy_5Io.js  index-DOWzQSDN.css  index-DTGhKASL.js  index-DUtuarQO.js  index-DWvEl5J1.js  index-DhpEaSVW.js  index-MN_BtN0Q.css  (+6 more)
src/unified-ui/render/: Dockerfile
(+909 files in other folders)
