[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crm-cache"
version = "0.1.0"
description = "CRM Caching SDK - Redis and Memory cache backends"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CRM Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
all = ["redis>=5.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["crm_cache*"]
