[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crm-channels"
version = "0.1.0"
description = "Platform-agnostic channel abstractions for CRM messaging"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.3",
]

[tool.hatch.build.targets.wheel]
packages = ["crm_channels"]
