[project]
name = "crm-llm"
version = "0.1.0"
description = "Shared LLM client library for CRM modules"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.8.1",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
google = ["google-genai>=1.52.0"]
all = ["google-genai>=1.52.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crm_llm"]
